--- a/pages/projekter.html
+++ b/pages/projekter.html
@@ -23,7 +23,11 @@
 	</nav>
 	<section> 
 	  <h1>Mine projekter</h1>
-	<img src="../images/Free_Art.jpg" alt="Free art" class="free_art">
+	<img src="../images/Free_Art.jpg" alt="Free art" class="pic">	
+	<img src="../images/XD_Forside.png" alt="XD Forside" class="pic">
+	<img src="../images/XD_Scroll.png" alt="XD Scroll" class="pic">
+	<img src="../images/magnusfærdig.jpg" alt="Bro Forsøg" class="pic">	
+	<img src="../images/BroOpgaveDone.jpg" alt="Bro Opgave" class="pic">	
 	</section> 
 </body>
 </html>
