--- a/pages/ommig.html
+++ b/pages/ommig.html
@@ -14,12 +14,12 @@
 	<div id="bottom"></div>
   <nav>
     <ul>
-		<li class="square"><a href="../index.html">Hjem</a></li>
+		<li><a href="../index.html">Hjem</a></li>
       <li><a href="#">Om</a></li>
       <li><a href="projekter.html">Projekter</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
-  </nav>
+  </nav>  
 	<section>
 	
 	<h1>Om mig</h1>
