--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<section>
 	<div>
 	<h1>Mit navn er<br> Magnus Wolter,</h1>
-	<h3>jeg studerer på Cphbusiness i Lyngby.</h3>
+	<h3>jeg er student ved Cphbusiness i Lyngby.</h3>
 	</div>
 		</section>
 	<div class="boxed">
