--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -24,15 +24,15 @@
 <div class="kontakt_form">
   <form action="/action_page.php">
     <div class="left_content">
-      <label for="fname" class="input_contact">Navn</label><br />
+      <label for="fname" class="input_contact">Fornavn</label><br />
       <label for="lname" class="input_contact">Efternavn</label><br />
       <label for="email" class="input_contact">Email</label><br />
 		<label for="text" class="input_contact">Besked</label>
     </div>
     <div class="right_content">
-      <input type="text" id="fname" name="navn" placeholder="Dit navn..">
+      <input type="text" id="fname" name="navn" placeholder="Dit fornavn..">
       <input type="text" id="lname" name="efternavn" placeholder="Dit efternavn..">
-		<input type="text" id="email" name="email" placeholder="Din email..">
+		<input type="email" id="email" name="email" placeholder="Din email..">
 		<textarea name="comment" placeholder="Din besked.."></textarea><br />
       <input type="submit" class="btn" value="Send">
     </div>
