--- a/pages/ommig.html
+++ b/pages/ommig.html
@@ -24,7 +24,7 @@
 	
 	<h1>Om mig</h1>
 	<p class="om_mig">
-	Jeg er 21 år og er på nuværende tidspunkt i gang med 1. semester af multimediedesigner uddannelsen på Cphbusiness i Lyngby.  Før jeg startede på denne uddannelse havde jeg begrænset erfaring med design og ingen erfaring med kodning.<br><br> Det var også blot en måned for ansøgningsfristen at jeg indså at det lige netop skulle være den her uddannelse jeg skulle læse på. Hvis jeg var blevet spurgt for fem år siden hvad jeg gerne ville læse i fremtiden, havde jeg aldrig forestillet mig at det skulle være multimediedesign. 	
+	Jeg er 21 år og er på nuværende tidspunkt i gang med 1. semester af multimediedesigner uddannelsen på Cphbusiness i Lyngby.  Før jeg startede på denne uddannelse havde jeg begrænset erfaring med design og ingen erfaring med kodning.<br><br> Det var også blot en måned før ansøgningsfristen at jeg indså at det lige netop skulle være den her uddannelse jeg skulle læse på. Hvis jeg var blevet spurgt for fem år siden hvad jeg gerne ville læse i fremtiden, havde jeg aldrig forestillet mig at det skulle være multimediedesign. 	
 	</p>	
 	
 	
