--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
 	<div id="right"></div>
 	<div id="top"></div>
 	<div id="bottom"></div>
-	<nav>
-    <ul>
-          <li><a href="#">Hjem</a></li>
-          <li><a href="pages/ommig.html">Om</a></li>
-          <li><a href="pages/projekter.html">Projekter</a></li>
-          <li><a href="pages/kontakt.html">Kontakt</a></li>
-        </ul>
-  </nav>
-	<section>
-	<div>
-	<h1>Mit navn er<br> Magnus Wolter,</h1>
-	<h3>jeg er student ved Cphbusiness i Lyngby.</h3>
+<nav>
+  <ul>
+		<li><a href="#">Hjem</a></li>
+		<li><a href="pages/ommig.html">Om</a></li>
+		<li><a href="pages/projekter.html">Projekter</a></li>
+		<li><a href="pages/kontakt.html">Kontakt</a></li>
+  </ul>
+</nav>
+<section>
+  <div>
+    <h1>Mit navn er<br>
+      Magnus Wolter,</h1>
+    <h3>jeg er student ved Cphbusiness i Lyngby.</h3>
+  </div>
+</section>
+	<div class="boxed"> <a href="pages/projekter.html">
+	  <p class="projects">Se mine projekter her.</p>
+	  </a> 
 	</div>
-		</section>
-	<div class="boxed">
-		<a href="pages/projekter.html"><p class="projects">Se mine projekter her.</p></a>
-</div>
 </body>
 </html>
